fix: layout issues

--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -35,7 +35,7 @@ body {
   /* display: flex; */
   place-items: center;
   min-width: 420px;
-  height: 540px;
+  height: 560px;
 }
 
 h1 {
